try fix horizontal scroll

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -29,7 +29,8 @@
 		font-family: 'Noto Sans Arabic', 'Readex Pro';
 		direction: rtl;
 		word-wrap: break-word;
-
+		max-width: 100vw;
+		overflow-x: hidden;
 		@apply prose dark:prose-invert container m-auto px-2 md:px-0;
 	}
 
